--- a/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx.css
+++ b/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx.css
@@ -1,5 +1,49 @@
 // see http://fxexperience.com/2011/12/styling-fx-buttons-with-css/ for more
 
+
+
+
+
+
+#orange {
+    -fx-background-color: orange;
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 24px;
+    -fx-text-fill: white;
+    -fx-border-radius: 0.001px;
+    -fx-border-color: black;
+    -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
+}
+
+#zahlen {
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 24px;
+    -fx-text-fill: black;
+    -fx-border-radius: 0.001px;
+    -fx-border-color: black;
+    -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
+}
+
+#functions {
+    -fx-background-color: #c1c1c1;
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 24px;
+    -fx-text-fill: black;
+    -fx-border-radius: 0.001px;
+    -fx-border-color: black;
+    -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
+}
+
+
+
+
+
+
+
+
+
+
+
 #green {
     -fx-background-color:
         linear-gradient(#f0ff35, #a9ff00),
