minor improvements, most of it in design

--- a/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx.fxml
+++ b/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx.fxml
@@ -53,7 +53,7 @@
                 <Button id="functions" fx:id="ac" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="AC" GridPane.rowIndex="1" />
                 <Button id="functions" fx:id="plusminus" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="±" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <Button id="functions" fx:id="prozent" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="\%" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <TextField fx:id="displayTextField" maxHeight="100.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" prefHeight="100.0" prefWidth="400.0" promptText="&lt;this is the text&gt;" BorderPane.alignment="CENTER" GridPane.columnSpan="4" />
+                <TextField fx:id="displayTextField" maxHeight="100.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" prefHeight="100.0" prefWidth="400.0" promptText="&lt;Hier könnte ihre Werbung stehen! :)&gt;" BorderPane.alignment="CENTER" GridPane.columnSpan="4" />
             </children>
         </GridPane>
     </center>
