--- a/material/src/main/resources/fhj/swengb/lectures/l03/buttonstyles.css
+++ b/material/src/main/resources/fhj/swengb/lectures/l03/buttonstyles.css
@@ -1,4 +1,24 @@
-Button {
+#buttons-orange .button {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, orange;
+} /* see modena.css */
+
+#labelarea {
+    -fx-min-height: 70px;
+}
+
+/*.buttons-gray Button {
+
+
+  -fx-font-family: arial;
+  -fx-color: #1C1C1C !important;
+  -fx-font-size: 14px;
+  -fx-padding: 15px 15px;
+  -fx-border: 1px solid #A3A3A3;
+  -fx-background-color: linear-gradient(top,  #EEEEEE,  #CFCFCF);
+}*/
+
+
+.btn-green {
     -fx-background-color:
         linear-gradient(#f0ff35, #a9ff00),
         radial-gradient(center 50% -40%, radius 200%, #b8ee36 45%, #80c800 50%);
@@ -7,24 +27,13 @@ Button {
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
     -fx-text-fill: #395306;
 }
-
-
-#green {
-    -fx-background-color:
-        linear-gradient(#f0ff35, #a9ff00),
-        radial-gradient(center 50% -40%, radius 200%, #b8ee36 45%, #80c800 50%);
-    -fx-background-radius: 6, 5;
-    -fx-background-insets: 0, 1;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
-    -fx-text-fill: #395306;
-}
-#round-red {
+.btn-round-red {
     -fx-background-color: linear-gradient(#ff5400, #be1d00);
     -fx-background-radius: 30;
     -fx-background-insets: 0;
     -fx-text-fill: white;
 }
-#bevel-grey {
+.btn-bevel-grey {
     -fx-background-color:
         linear-gradient(#f2f2f2, #d6d6d6),
         linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%),
@@ -34,7 +43,7 @@ Button {
     -fx-text-fill: black;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
 }
-#glass-grey {
+.btn-glass-grey {
     -fx-background-color:
         #c3c4c4,
         linear-gradient(#d6d6d6 50%, white 100%),
@@ -44,7 +53,7 @@ Button {
     -fx-text-fill: black;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
 }
-#shiny-orange {
+.btn-shiny-orange {
     -fx-background-color:
         linear-gradient(#ffd65b, #e68400),
         linear-gradient(#ffef84, #f2ba44),
@@ -58,7 +67,7 @@ Button {
     -fx-font-size: 14px;
     -fx-padding: 10 20 10 20;
 }
-#dark-blue {
+.btn-dark-blue {
     -fx-background-color:
         #090a0c,
         linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
@@ -140,7 +149,7 @@ Button {
 #iphone-toolbar {
     -fx-background-color: linear-gradient(#98a8bd 0%, #8195af 25%, #6d86a4 100%);
 }
-#iphone {
+.iphone Button {
     -fx-background-color:
         #a6b5c9,
         linear-gradient(#303842 0%, #3e5577 20%, #375074 100%),
@@ -204,7 +213,7 @@ Button {
     -fx-text-fill: #242d35;
     -fx-font-size: 14px;
 }
-#lion {
+.lion Button {
     -fx-background-color:
         rgba(0,0,0,0.08),
         linear-gradient(#9a9a9a, #909090),
