--- a/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx.css
+++ b/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx.css
@@ -1,6 +1,45 @@
-// see http://fxexperience.com/2011/12/styling-fx-buttons-with-css/ for more
+.button, #result_field {
+    /* maximise items (in cell) */
+    -fx-max-width: Infinity;
+    -fx-max-height: Infinity;
+    /* font settings */
+    -fx-font-size: 1.7em;
+    -fx-font-weight: bold;
+}
 
-#green {
+/* removes "glow" (blue outline) after pressing a button
+.button:focused {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+} */
+
+/*.button:armed {
+    -fx-color: green;
+}*/
+
+
+
+/*
+#buttons-orange .button {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, orange;
+}  see modena.css */
+
+
+
+/*.buttons-gray Button {
+
+
+  -fx-font-family: arial;
+  -fx-color: #1C1C1C !important;
+  -fx-font-size: 14px;
+  -fx-padding: 15px 15px;
+  -fx-border: 1px solid #A3A3A3;
+  -fx-background-color: linear-gradient(top,  #EEEEEE,  #CFCFCF);
+}*/
+
+// see http://fxexperience.com/2011/12/styling-fx-buttons-with-css/ for more
+.green {
     -fx-background-color:
         linear-gradient(#f0ff35, #a9ff00),
         radial-gradient(center 50% -40%, radius 200%, #b8ee36 45%, #80c800 50%);
@@ -10,17 +49,32 @@
     -fx-text-fill: #395306;
 }
 
-#grey {
+.grey {
     -fx-background-color: #A8A8A8;
     -fx-text-fill: #311c09;
 }
+.grey:hover {
+    -fx-background-color: #B8B8B8;
+    -fx-text-fill: #311c09;
+}
+.grey:armed {
+    -fx-background-color: #A0A0A0;
+    -fx-text-fill: #311c09;
+}
 
-#round-red {
+.round-red {
     -fx-background-color: linear-gradient(#ff5400, #be1d00);
-    -fx-background-insets: 0;
     -fx-text-fill: white;
 }
-#bevel-grey {
+.round-red:hover {
+     -fx-background-color: #ff5400;
+}
+.round-red:armed {
+     -fx-background-color: #be1d00;
+}
+
+
+.bevel-grey {
     -fx-background-color:
         linear-gradient(#f2f2f2, #d6d6d6),
         linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%),
@@ -29,7 +83,7 @@
     -fx-text-fill: black;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
 }
-#glass-grey {
+.glass-grey {
     -fx-background-color:
         #c3c4c4,
         linear-gradient(#d6d6d6 50%, white 100%),
@@ -39,7 +93,7 @@
     -fx-text-fill: black;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
 }
-#shiny-orange {
+.shiny-orange {
     -fx-background-color:
         linear-gradient(#ffd65b, #e68400),
         linear-gradient(#ffef84, #f2ba44),
@@ -53,7 +107,7 @@
     -fx-font-size: 14px;
     -fx-padding: 10 20 10 20;
 }
-#dark-blue {
+.dark-blue {
     -fx-background-color:
         #090a0c,
         linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
@@ -68,10 +122,10 @@
     -fx-font-size: 12px;
     -fx-padding: 10 20 10 20;
 }
-#dark-blue Text {
+.dark-blue Text {
     -fx-effect: dropshadow( one-pass-box , rgba(0,0,0,0.9) , 1, 0.0 , 0 , 1 );
 }
-#record-sales {
+.record-sales {
     -fx-padding: 8 15 15 15;
     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;
     -fx-background-radius: 8;
@@ -84,22 +138,22 @@
     -fx-font-weight: bold;
     -fx-font-size: 1.1em;
 }
-#record-sales:hover {
+.record-sales:hover {
     -fx-background-color:
         linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
         #9d4024,
         #d86e3a,
         radial-gradient(center 50% 50%, radius 100%, #ea7f4b, #c54e2c);
 }
-#record-sales:pressed {
+.record-sales:pressed {
     -fx-padding: 10 15 13 15;
     -fx-background-insets: 2 0 0 0,2 0 3 0, 2 0 4 0, 2 0 5 0;
 }
-#record-sales Text {
+.record-sales Text {
     -fx-fill: white;
     -fx-effect: dropshadow( gaussian , #a30000 , 0,0,0,2 );
 }
-#rich-blue {
+.rich-blue {
     -fx-background-color:
         #000000,
         linear-gradient(#7ebcea, #2f4b8f),
@@ -111,23 +165,33 @@
     -fx-text-fill: white;
     -fx-font-size: 12px;
 }
-#rich-blue Text {
+.rich-blue Text {
     -fx-effect: dropshadow( one-pass-box , rgba(0,0,0,0.8) , 0, 0.0 , 0 , 1);
 }
-#big-yellow {
+.big-yellow {
     -fx-background-color:
         #ecebe9,
         rgba(0,0,0,0.05),
-        linear-gradient(#dcca8a, #c7a740),
-        linear-gradient(#f9f2d6 0%, #f4e5bc 20%, #e6c75d 80%, #e2c045 100%),
-        linear-gradient(#f6ebbe, #e6c34d);
-    -fx-font-family: "Helvetica";
+        linear-gradient(#dcca8a, #c7a740), /* border */
+        linear-gradient(#f9f2d6 0%, #f4e5bc 20%, #e6c75d 80%, #e2c045 100%), /* border when button focused and hover */
+        linear-gradient(#f6ebbe, #e6c34d); /* actual background */
     -fx-text-fill: #311c09;
 }
-#big-yellow Text {
+.big-yellow:hover{
+    -fx-background-color:
+        #ecebe9,
+        rgba(0,0,0,0.05),
+        linear-gradient(#dcca8a, #c7a740), /* border */
+        linear-gradient(#f9f2d6 0%, #f4e5bc 20%, #e6c75d 80%, #e2c045 100%), /* border when button focused and hover */
+        linear-gradient(#f6ebbe, #f0d476); /* actual background */
+}
+.big-yellow:armed{
+    -fx-background-color: #c7a740;
+}
+.big-yellow Text {
     -fx-effect: dropshadow( one-pass-box , rgba(255,255,255,0.5) , 0, 0.0 , 0 , 1);
 }
-#iphone-toolbar {
+.iphone-toolbar {
     -fx-background-color: linear-gradient(#98a8bd 0%, #8195af 25%, #6d86a4 100%);
 }
 #iphone {
@@ -143,10 +207,10 @@
     -fx-font-size: 12px;
     -fx-text-fill: white;
 }
-#iphone Text {
+.iphone Text {
     -fx-effect: dropshadow( one-pass-box , rgba(0,0,0,0.8) , 0, 0.0 , 0 , -1 );
 }
-#ipad-dark-grey {
+.ipad-dark-grey {
     -fx-background-color:
         linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
         linear-gradient(#020b02, #3a3a3a),
@@ -162,10 +226,10 @@
     -fx-text-fill: white;
     -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
 }
-#ipad-dark-grey Text {
+.ipad-dark-grey Text {
     -fx-effect: dropshadow( one-pass-box , black , 0, 0.0 , 0 , -1 );
 }
-#ipad-grey {
+.ipad-grey {
     -fx-background-color:
         linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
         linear-gradient(#020b02, #3a3a3a),
@@ -180,10 +244,10 @@
     -fx-text-fill: #333333;
     -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
 }
-#ipad-grey Text {
+.ipad-grey Text {
     -fx-effect: dropshadow( one-pass-box , white , 0, 0.0 , 0 , 1 );
 }
-#lion-default {
+.lion-default {
     -fx-background-color:
         rgba(0,0,0,0.08),
         linear-gradient(#5a61af, #51536d),
@@ -194,7 +258,7 @@
     -fx-text-fill: #242d35;
     -fx-font-size: 14px;
 }
-#lion {
+.lion {
     -fx-background-color:
         rgba(0,0,0,0.08),
         linear-gradient(#9a9a9a, #909090),
@@ -205,7 +269,7 @@
     -fx-text-fill: #242d35;
     -fx-font-size: 14px;
 }
-#windows7-default {
+.windows7-default {
     -fx-background-color:
         #3c7fb1,
         linear-gradient(#fafdfe, #e8f5fc),
@@ -216,7 +280,7 @@
     -fx-text-fill: black;
     -fx-font-size: 14px;
 }
-#windows7 {
+.windows7 {
     -fx-background-color:
         #707070,
         linear-gradient(#fcfcfc, #f3f3f3),
