--- a/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx_abajric.fxml
+++ b/homework/calculatorfx/src/main/resources/fhj/swengb/calculatorfx/calculatorfx_abajric.fxml
@@ -11,11 +11,12 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
+            <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" percentHeight="85.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <GridPane prefHeight="52.0" prefWidth="280.0">
+                <GridPane prefHeight="52.0" prefWidth="280.0" GridPane.rowIndex="1">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -27,7 +28,7 @@
                         <TextField id="result_field" fx:id="displayTextField" editable="false" />
                     </children>
                 </GridPane>
-                <GridPane id="buttonarea" GridPane.rowIndex="1">
+                <GridPane id="buttonarea" GridPane.rowIndex="2">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="75.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
@@ -108,6 +109,16 @@
                         </GridPane>
                     </children>
                 </GridPane>
+            <MenuBar>
+              <menus>
+                  <Menu mnemonicParsing="false" text="Change Skin">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Amar's Skin" />
+                        <MenuItem mnemonicParsing="false" text="DeKilla's Skin" />
+                     </items>
+                  </Menu>
+              </menus>
+            </MenuBar>
             </children>
         </GridPane>
     </center>
