--- a/homework/avatarix/src/main/resources/fhj/swengb/avatarix/Avatarix.fxml
+++ b/homework/avatarix/src/main/resources/fhj/swengb/avatarix/Avatarix.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="615.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="615.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.avatarix.AvatarixController">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1879.0" prefWidth="947.0">
          <children>
