--- a/homework/avatarix/src/main/resources/fhj/swengb/avatarix/Avatarix.fxml
+++ b/homework/avatarix/src/main/resources/fhj/swengb/avatarix/Avatarix.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="615.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.avatarix.AvatarixController">
+<ScrollPane id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="615.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fhj.swengb.avatarix.AvatarixController">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1879.0" prefWidth="947.0">
          <children>
-            <GridPane fx:id="grid_g1" layoutX="102.0" layoutY="44.0" prefHeight="536.0" prefWidth="797.0">
+            <GridPane id="grid" fx:id="grid_g1" layoutX="102.0" layoutY="44.0" prefHeight="536.0" prefWidth="797.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -43,7 +43,7 @@
             </GridPane>
             <Label id="grlabel" fx:id="label_g1" layoutX="14.0" layoutY="14.0" prefHeight="58.0" prefWidth="88.0" text="Gruppe 1" />
             <Label id="grlabel" fx:id="label_g2" layoutX="14.0" layoutY="610.0" prefHeight="58.0" prefWidth="88.0" text="Gruppe 2" />
-            <GridPane fx:id="grid_g2" layoutX="102.0" layoutY="643.0" prefHeight="536.0" prefWidth="797.0">
+            <GridPane id="grid" fx:id="grid_g2" layoutX="102.0" layoutY="643.0" prefHeight="536.0" prefWidth="797.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -71,7 +71,7 @@
                </children>
             </GridPane>
             <Label id="grlabel" fx:id="label_g3" layoutX="14.0" layoutY="1255.0" prefHeight="58.0" prefWidth="88.0" text="Gruppe 3" />
-            <GridPane fx:id="grid_g3" layoutX="102.0" layoutY="1284.0" prefHeight="536.0" prefWidth="797.0">
+            <GridPane id="grid" fx:id="grid_g3" layoutX="102.0" layoutY="1284.0" prefHeight="536.0" prefWidth="797.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
